// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       
      expenses
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <h3
      className="page-header__subtitle"
    >
      <span />
       
      expenses
       hidden
    </h3>
    <div
      className="page-header__actions"
    >
      <[object Object]
        className="button"
        to="/create"
      >
        Add Expense
      </[object Object]>
    </div>
    <div
      className="graph"
    >
      <ExpensesBarChart
        data={
          Array [
            Object {
              "x": "12-31",
              "y": 25,
            },
            Object {
              "x": "01-01",
              "y": "",
            },
            Object {
              "x": "01-02",
              "y": "",
            },
            Object {
              "x": "01-03",
              "y": "",
            },
            Object {
              "x": "01-04",
              "y": 16,
            },
          ]
        }
      />
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       
      expenses
       totalling 
      <span>
        $23,523.42
      </span>
    </h1>
    <h3
      className="page-header__subtitle"
    >
      <span />
       
      expenses
       hidden
    </h3>
    <div
      className="page-header__actions"
    >
      <[object Object]
        className="button"
        to="/create"
      >
        Add Expense
      </[object Object]>
    </div>
    <div
      className="graph"
    >
      <ExpensesBarChart
        data={
          Array [
            Object {
              "x": "12-31",
              "y": 25,
            },
            Object {
              "x": "01-01",
              "y": "",
            },
            Object {
              "x": "01-02",
              "y": "",
            },
            Object {
              "x": "01-03",
              "y": "",
            },
            Object {
              "x": "01-04",
              "y": 16,
            },
          ]
        }
      />
    </div>
  </div>
</div>
`;
